style: map overflow fixed

--- a/src/app/views/HomeView/components/ForumMap/style.scss
+++ b/src/app/views/HomeView/components/ForumMap/style.scss
@@ -1,7 +1,7 @@
 .ForumMap {
     background-color: var(--color-surface);
     display: flex;
-    // max-width: 900px;
+    max-width: 900px;
     // margin: 0 auto;
     flex-wrap: wrap;
     align-items: center;
